# HireLens

./: README.md  analyzer.py  app.py  job_matcher.py  pyproject.toml  resume_parser.py
static/css/: custom.css
static/data/: job_roles.json  skills.json
static/js/: main.js
templates/: index.html
