[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "language-tool-python>=2.9.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "spacy>=3.8.4",
    "textstat>=0.7.5",
    "werkzeug>=3.1.3",
]
